--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-get-location": "^2.2.1",
+    "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^5.1.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^6.1.2",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
